# Product_API

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  start.sh
app/: main.py
app/core/: exceptions.py
app/db/: connection.py  models.py  seed.py
app/repositories/: category_repository.py
app/routes/: category.py
app/schemas/: category.py
app/services/: category_service.py
app/utils/: slug.py
migrations/: env.py
migrations/versions/: 78237cd23df6_create_categories_table.py
test/: conftest.py  test_category_service.py
