[project]
name = "product-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "pydantic>=2.12.2",
    "pytest>=8.4.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]
